Add GA4GH Passports support